--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
 
         <script src="js/baguetteBox.min.js"></script>
+        <script src="js/searchFilter.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
